--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -28,7 +28,7 @@
             
             <header>
                 
-                <h1 class="titre hide">{% block entetetitle %}MathSup{% endblock %}</h1>
+                <h1 class="titre">{% block entetetitle %}MathSup{% endblock %}</h1>
                 
                 <div class="entete" >
                     
@@ -98,7 +98,7 @@
                 {% endblock %}                       
                 
             </section>
-                
+            <div class="clearfix"></div>
             <footer>
                 
                 <div>
@@ -130,7 +130,8 @@
         
         {% block javascripts1 %}
         {# inclusion de la librairie de jquery #}
-        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->            
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
         {% endblock %}
         
         {% block javascripts2 %}
